Juke build 0.8.1/0.9.0/0.8.1 revert https://github.com/tgstation/tgstation/pull/60404 https://github.com/tgstation/tgstation/pull/60897 https://github.com/tgstation/tgstation/pull/61025 https://github.com/tgstation/tgstation/pull/61110 https://github.com/tgstation/tgstation/pull/61005

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ Thumbs.db
 *.log
 *.int
 *.rsc
+*.mdme
+*.mdme.*
+*.m.dme
+*.test.dme
 *.dmb
 *.lk
 *.backup
@@ -23,8 +27,6 @@ tools/MapDaemon/logs/*.txt
 
 tools/BalanceTool/raw.json
 
-#Temp files from cbt stuff
-tgmc.mdme
 
 # Ignore compiled linux libs in the root folder, e.g. librust_g.so
 /*.so
